<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DiningBuddy</string>
    <string name="settings_name">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_developer">Developer</string>

    <string name="preference_wifi_only_tile">WiFi Only</string>
    <string name="preference_wifi_only_summary">Only send and receive location updates when connected to WiFi</string>
    <string name="preference_notify_favorites_title">Favorite Food Notifications</string>
    <string name="preference_notify_favorites_summary">Send a notification when a dining hall is serving one of your favorites</string>
    <string name="preference_favorites_title">Favorite Foods</string>
    <string name="preference_favorites_summary">Enter foods to notify you about exactly as they appear on the menu.
    Separate multiple foods with a comma.</string>
    <string name="preference_favorites_hint">Tater Tots,Tender Tuesday,Pulled Pork</string>

    <string name="preference_time_set">Set</string>
    <string name="preference_time_cancel">Cancel</string>
    <string name="preference_favorites_notify_time_title">Notification Time</string>

    <string name="title_activity_cnudining">DiningBuddy</string>
    <string name="regattas_title">Regattas</string>
    <string name="commons_title">The Commons</string>
    <string name="einsteins_title">Einstein\'s</string>
    <string name="loading_text">Loading…</string>
    <string name="empty_feed_text">No recent updates</string>
    <string name="title_activity_cnulocation_view">Location</string>
    <string name="feedback_crowded">Is it very crowded?</string>
    <string name="feedback_minutes">Please estimate waiting time for your food:</string>
    <string name="feedback_comments">Tell others how it looks!</string>
    <string name="feedback_button">Submit</string>
    <string name="feedback_response">Thanks!</string>
    <string name="feedback_response_detail">Accurate feedback helps improve the data provided to you.</string>
    <string name="feedback_hint">What\'s going on?</string>
    <string name="einsteins_hours">Monday - Thursday: 7:30AM - 1AM
        \n\nFriday: 7:30AM - 8PM
        \n\nSaturday: 9AM - 5PM
        \n\nSunday: 1PM - 1AM</string>
    <string name="first_user_alert_text">Hey there!\n\n
        Thanks for being one of the first users to try out the app.
        There\'s still heavy testing going on, so please feel free to
        contact me personally with any issues you notice when using the app.
        You can email me at ad@mfendley.com or tweet me @gravity_low.\n\n
        To help grow the app and make predictions more accurate, be sure to
        tell people about it and get them using it: the more users there are,
        the better calculations become about how crowded the dining halls are.
        Be sure to also leave feedback when \'re in a dining hall via the feedback
        tab that will appear; it helps let everyone else know what\'s going on!\n\n
        Have a great day and please enjoy!</string>

</resources>
